# aka_no_claw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Constitution.md  LIQUIDITY_METHODOLOGY.md  MAC_MINI_M4.md  OPENCLAW_TCG_MONITOR_PLAN.md  README.md  README_SNS_MONITOR.md  SYSTEM_MANIFEST.yaml  TELEGRAM_TOOL_SPEC.md  TEST_RECORD_2026-04-16.md  TEST_RECORD_2026-04-17.md  TODO_REFACTOR.md  pyproject.toml  requirements.txt  start-dashboard.bat  start-mac-mini-stack.command  start-rpi5-stack.sh  start-telegram-bot-no-dashboard.bat  start-telegram-bot.bat  stop-mac-mini-stack.command  stop-rpi5-stack.sh
config/: workspace-lock.toml
data/: dashboard_manual_check.sqlite3-journal  intent_routing_phrasings.json  proseka_songs.json  sns_ip_catalog.json
docs/: AGENT_ONBOARDING.md  AUTO_LOGIN_SETUP.md  BLUETOOTH_XGIMI_DEBUG_2026-07-01.md  BROADLINK_LOCAL_NETWORK_TROUBLESHOOTING.html  BROADLINK_RESTART_RECOVERY_PLAYBOOK.md  BROWSER_UI_VALIDATION_PLAYBOOK.md  CHAT_CLOUD_POOL_STICKY_PROVIDER_PLAN.md  CHAT_GOAL_LOOP_PLAN.md  CHAT_REWORK_DEBUG_TRACE.md  CHAT_TOOL_PLANNER_STABILITY_FIX.md  COMMISSION_SYSTEM_PLAN.md  CROSS_REPO_CONTRACTS.md  CURRENT_STATE.md  DOCS_CHANGE_TEMPLATE.md  DOCS_INDEX.md  DOCUMENTATION_GOVERNANCE.md  DOC_AUDIT.md  DOC_DRIFT_CHECKLIST.md  ISSUE_53_WORKFLOW_REVIEW_HANDOFF.md  ISSUE_66_PHASE2_PROGRESS.md  KB_EMBEDDING_PLAN.md  LIQUIDITY_METHODOLOGY.md  LOGGING.md  MAC_MINI_M4.md  MUSIC_PLAYBACK_TROUBLESHOOTING.md  NEW_DYNAMIC_TOOLS_PROGRESS.md  NEW_E2E_DISCRIMINATING_TESTS.md  NEW_OPENCODE_DECOUPLING_PLAN.md  OPENCLAW_TCG_MONITOR_PLAN.md  OPPORTUNITY_AGENT_HANDOFF.md  OPPORTUNITY_AGENT_SPEC.md  P1_ENGINEERING_HARDENING_IMPLEMENTATION_PLAN.md  QUIZ_AUTHORING_PROGRESS.md  QUIZ_FAVORITE_SONGS.md  QUIZ_REVIEWS.md  QUIZ_TEACHING_LOOP.md  QUIZ_VOCAB_AUTHORING_PROGRESS.md  R1_COMMAND_BRIDGE_INVENTORY.md  R2_TELEGRAM_OWNERSHIP_INVENTORY.md  R3_RESEARCH_PIPELINE_INVENTORY.md  (+23 more)
eval_cases/: 001_goal_multistep_happy.yaml  002_reuse_fast_path.yaml  003_replan_recovers.yaml  004_budget_continuation.yaml  005_malicious_output_guardrail.yaml  006_missing_variable_stops.yaml  007_type_mismatch_stops.yaml  008_search_hard_cap.yaml
fwdspecptcg/: README.md
launchers/: install-aivis-speech.command  start-dashboard.bat  start-mac-mini-stack.command  start-rpi5-stack.sh  start-telegram-bot-no-dashboard.bat  start-telegram-bot.bat  stop-mac-mini-stack.command  watch-claude-ratelimit.py  watch-claude-ratelimit.sh
scripts/: README.md  _docs_yaml.py  (+27 more)
(+438 files in other folders)
