[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-price-monitor"
version = "0.1.0"
description = "Reusable price-monitoring core with a separate OpenClaw adapter and first-phase TCG support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "broadlink>=0.19,<1",
  "faster-whisper>=1.1,<2",
  "multipart>=1.3,<2",
  "numpy>=2,<3",
  "playwright>=1.54,<2",
  "price-monitor-bot",
  "sns-monitor-bot",
  "telegram-core",
  "requests>=2.31,<3",
  "SudachiDict-full>=20260428,<20270101",
  "SudachiPy>=0.6,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<1",
]
ocr = [
  "easyocr>=1.7,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
openclaw_adapter = ["dashboard_assets/*.html", "dashboard_assets/*.css", "dashboard_assets/*.js"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live_image_lookup: verifies live image lookup regression fixtures against current OCR and marketplace sources.",
]

[tool.ruff]
target-version = "py312"
line-length = 120
# Baseline pass (C4): known repo-wide backlog is non-blocking in CI for now
# (see .github/workflows/tests.yml "Static checks" step) so this doesn't
# become a required gate in the same PR that introduces the tool.
